--- a/index.html
+++ b/index.html
@@ -9,30 +9,15 @@
 
 <body>
     <div class="form">
-        <h1>Agregar estudiante nuevo</h1>
-        <input type="text" name="dni" id="dni" placeholder="DNI" />
-        <input type="text" id="nombre" placeholder="Nombre" />
-        <input type="text" id="apellido" placeholder="Apellido" />
-        <input type="number" id="edad" placeholder="Edad" />  
-        <input type="number" name="" id="nota" placeholder="Ingresa la nota">  
-        <button id="agregar">Agregar</button>
+      <h1> Mostrar datos de la huerta</h1>
+      <input type="text" name="TempSuelo" id="TempSuelo" placeholder="TempSuelo" />
+      <input type="text" id="TempAire" placeholder="TempAire" />
+      <input type="text" id="HumedadSuelo" placeholder="HumedadSuelo" />
+      <input type="number" id="HumedadAire" placeholder="HumedadAire" />  
+       
+      <button id="agregar">Agregar</button>
     </div>
 </body>
 <script src="db.js" type="module"></script>
 
 </html>
-
-
-
-
-
-//{
-    "48910774": {
-      "apellido": "Paglino",
-      "nombre": "Alejo"
-    },
-    "48910890": {
-      "apellido": "Reinhardt",
-      "nombre": "Alejo"
-    }
-  }
